# ESP32

./: .gitignore  Dockerfile  README.md
3dPrinting/: DirectionFix.stl  ServoFix.stl  ServoToDirectionBar.stl
android_project/: settings.gradle
android_project/app/: build.gradle
android_project/gradle/: libs.versions.toml
blink/: CMakeLists.txt  pythonSend.py  sdkconfig
blink/main/: CMakeLists.txt  blink.c
blink_example/: sdkconfig  sdkconfig.old
docs/: index.html  script.js  style.css
rustStation/: README.md
rustStation/learnBasics/: README.md
rustStation/station/: Cargo.toml  README.md  cargo_run_debug.sh  config.toml  debug_camera.yuv  first_frame.txt  replay_data.json
rustStation/station/src/: config.rs  error.rs  gui.rs  lib.rs  main.rs  monitor.rs  recorder.rs  udp.rs
rustStation/station/src/controller/: mod.rs
rustStation/station/src/gui/: mod.rs
rustStation/station/src/gui/screens/: camera.rs  car.rs  commands.rs  dump.rs  home.rs  logs.rs  main.rs  mod.rs  sensors.rs
rustStation/station/src/monitor/: mod.rs  parser.rs
rustStation/station/src/sensors/: mod.rs  parser.rs
rustStation/station/src/udp/: mod.rs  udp_dump.rs  udp_logs.rs  udp_sensors.rs  udp_video.rs
server/: .gitignore  CMakeLists.txt  README.md  clean_hex.txt  first_frame_cleaned.txt  log.txt  partitions.csv  sdkconfig.cameraS3  sdkconfig.esp0  sdkconfig.s3camesp1  sdkconfig.s3ctrlesp0  test_python_ws.py
server/main/: Kconfig.projbuild  idf_component.yml  main.c
windowscontrols/: pom.xml
ws_echo_server/: sdkconfig  sdkconfig.old
(+139 files in other folders)
